Fix bug in rss feed parsing using wrong url.

This actually broke all feeds that do not include a guid and possible overwrited data from other feeds.
Introduced in 2.3 beta.

BUG:227515